--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/qjgetword/helloGrunt/issues"
   },
-  "homepage": "https://github.com/qjgetword/helloGrunt#readme"
+  "homepage": "https://github.com/qjgetword/helloGrunt#readme",
+  "devDependencies": {
+    "grunt": "^1.3.0",
+    "grunt-contrib-jshint": "^2.1.0"
+  }
 }
