--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "homepage": "https://github.com/qjgetword/helloGrunt#readme",
   "devDependencies": {
     "grunt": "^1.3.0",
-    "grunt-contrib-jshint": "^2.1.0"
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-qunit": "^4.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
