--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,6 @@
     "es3": true,
     "es5": true,
     "esnext": true,
-    "esversion": 5,
     "forin": true,
     "freeze": true,
     "funcscope": true,
@@ -59,5 +58,6 @@
       "THREE": true,
       "TWEEN": true,
       "Stats":true
-    }
+    },
+    "predef":["define", "BMap", "angular", "BMAP_STATUS_SUCCESS"]
   }
